feat: notebook changes

--- a/code_testing.ipynb
+++ b/code_testing.ipynb
@@ -987,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 78,
    "id": "84ce85f5",
    "metadata": {},
    "outputs": [
@@ -995,7 +995,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [00:00<00:00, 4850.03it/s]\n"
+      "100%|██████████| 5/5 [00:00<00:00, 3833.92it/s]\n"
      ]
     }
    ],
@@ -1016,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 84,
    "id": "d589d6a3",
    "metadata": {},
    "outputs": [
@@ -1084,7 +1084,7 @@
        "2025-12-16 14:15:17.544919        -2.0         2.1"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1095,10 +1095,404 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "id": "2d9a3bb5",
+   "execution_count": 87,
+   "id": "82e3e0bb",
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.26000000000000023"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#buy one at the ask price, then sell one at the bid price \n",
+    "#cash flow in period t = 3 - close out positions "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "13e1fbf1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>bid</th>\n",
+       "      <th>ask</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2025-12-12 14:15:17.544919</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-12-13 14:15:17.544919</th>\n",
+       "      <td>1.5</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-12-14 14:15:17.544919</th>\n",
+       "      <td>1.2</td>\n",
+       "      <td>1.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-12-15 14:15:17.544919</th>\n",
+       "      <td>0.9</td>\n",
+       "      <td>1.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-12-16 14:15:17.544919</th>\n",
+       "      <td>0.8</td>\n",
+       "      <td>0.9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            bid  ask\n",
+       "2025-12-12 14:15:17.544919  1.0  1.5\n",
+       "2025-12-13 14:15:17.544919  1.5  2.0\n",
+       "2025-12-14 14:15:17.544919  1.2  1.7\n",
+       "2025-12-15 14:15:17.544919  0.9  1.4\n",
+       "2025-12-16 14:15:17.544919  0.8  0.9"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prices_x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "90de7c54",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>bid</th>\n",
+       "      <th>ask</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2025-12-12 14:15:17.544919</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-12-13 14:15:17.544919</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-12-14 14:15:17.544919</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-12-15 14:15:17.544919</th>\n",
+       "      <td>2.5</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-12-16 14:15:17.544919</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            bid  ask\n",
+       "2025-12-12 14:15:17.544919  1.0    2\n",
+       "2025-12-13 14:15:17.544919  2.0    3\n",
+       "2025-12-14 14:15:17.544919  4.0    5\n",
+       "2025-12-15 14:15:17.544919  2.5    3\n",
+       "2025-12-16 14:15:17.544919  1.0    2"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prices_y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "fa6b2f7d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2025-12-12 14:15:17.544919    0.0\n",
+       "2025-12-13 14:15:17.544919    0.0\n",
+       "2025-12-14 14:15:17.544919    0.0\n",
+       "2025-12-15 14:15:17.544919    0.0\n",
+       "2025-12-16 14:15:17.544919    0.0\n",
+       "Freq: D, dtype: float64"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results['cost']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "e1da021f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2025-12-12 14:15:17.544919    0.00\n",
+       "2025-12-13 14:15:17.544919   -0.75\n",
+       "2025-12-14 14:15:17.544919    0.12\n",
+       "2025-12-15 14:15:17.544919    0.26\n",
+       "2025-12-16 14:15:17.544919    0.11\n",
+       "Freq: D, dtype: float64"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results['cash_flow']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "fc3870f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2025-12-12 14:15:17.544919    0.00\n",
+       "2025-12-13 14:15:17.544919   -0.75\n",
+       "2025-12-14 14:15:17.544919   -0.63\n",
+       "2025-12-15 14:15:17.544919   -0.37\n",
+       "2025-12-16 14:15:17.544919   -0.26\n",
+       "Freq: D, dtype: float64"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results['cash_holdings']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "41a85b9e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>bid</th>\n",
+       "      <th>ask</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2025-12-12 14:15:17.544919</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-12-13 14:15:17.544919</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-12-14 14:15:17.544919</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-12-15 14:15:17.544919</th>\n",
+       "      <td>2.5</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-12-16 14:15:17.544919</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            bid  ask\n",
+       "2025-12-12 14:15:17.544919  1.0    2\n",
+       "2025-12-13 14:15:17.544919  2.0    3\n",
+       "2025-12-14 14:15:17.544919  4.0    5\n",
+       "2025-12-15 14:15:17.544919  2.5    3\n",
+       "2025-12-16 14:15:17.544919  1.0    2"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>bid</th>\n",
+       "      <th>ask</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2025-12-12 14:15:17.544919</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-12-13 14:15:17.544919</th>\n",
+       "      <td>1.5</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-12-14 14:15:17.544919</th>\n",
+       "      <td>1.2</td>\n",
+       "      <td>1.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-12-15 14:15:17.544919</th>\n",
+       "      <td>0.9</td>\n",
+       "      <td>1.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-12-16 14:15:17.544919</th>\n",
+       "      <td>0.8</td>\n",
+       "      <td>0.9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            bid  ask\n",
+       "2025-12-12 14:15:17.544919  1.0  1.5\n",
+       "2025-12-13 14:15:17.544919  1.5  2.0\n",
+       "2025-12-14 14:15:17.544919  1.2  1.7\n",
+       "2025-12-15 14:15:17.544919  0.9  1.4\n",
+       "2025-12-16 14:15:17.544919  0.8  0.9"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
     {
      "data": {
       "text/html": [
@@ -1127,28 +1521,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2025-12-12 14:15:17.544919</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-1.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2025-12-13 14:15:17.544919</th>\n",
        "      <td>1.0</td>\n",
-       "      <td>-1.6</td>\n",
+       "      <td>-1.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2025-12-14 14:15:17.544919</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-1.6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2025-12-15 14:15:17.544919</th>\n",
-       "      <td>-2.0</td>\n",
-       "      <td>2.1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2025-12-16 14:15:17.544919</th>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>2.2</td>\n",
+       "      <td>-2.0</td>\n",
+       "      <td>2.1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1156,29 +1550,159 @@
       ],
       "text/plain": [
        "                            position_y  position_x\n",
-       "2025-12-12 14:15:17.544919         1.0        -1.5\n",
-       "2025-12-13 14:15:17.544919         1.0        -1.6\n",
-       "2025-12-14 14:15:17.544919         0.0         0.0\n",
-       "2025-12-15 14:15:17.544919        -2.0         2.1\n",
-       "2025-12-16 14:15:17.544919        -1.0         2.2"
+       "2025-12-12 14:15:17.544919         0.0         0.0\n",
+       "2025-12-13 14:15:17.544919         1.0        -1.5\n",
+       "2025-12-14 14:15:17.544919         1.0        -1.6\n",
+       "2025-12-15 14:15:17.544919         0.0         0.0\n",
+       "2025-12-16 14:15:17.544919        -2.0         2.1"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "desired_positions"
+    "prices_y\n",
+    "prices_x\n",
+    "results['position_history']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "871d2e28",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.2799999999999998"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1*4-1.6*1.7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "e67b0ec0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2025-12-12 14:15:17.544919    0.00\n",
+       "2025-12-13 14:15:17.544919   -1.00\n",
+       "2025-12-14 14:15:17.544919    1.28\n",
+       "2025-12-15 14:15:17.544919    0.00\n",
+       "2025-12-16 14:15:17.544919   -2.32\n",
+       "Freq: D, dtype: float64"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#check - position value \n",
+    "results['position_value']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "6cc8165d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2025-12-12 14:15:17.544919    10000.00\n",
+       "2025-12-13 14:15:17.544919     9998.25\n",
+       "2025-12-14 14:15:17.544919    10000.65\n",
+       "2025-12-15 14:15:17.544919     9999.63\n",
+       "2025-12-16 14:15:17.544919     9997.42\n",
+       "Freq: D, dtype: float64"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results['equity_curve']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "1beef918",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2025-12-12 14:15:17.544919    0.00\n",
+       "2025-12-13 14:15:17.544919   -1.75\n",
+       "2025-12-14 14:15:17.544919    0.65\n",
+       "2025-12-15 14:15:17.544919   -0.37\n",
+       "2025-12-16 14:15:17.544919   -2.58\n",
+       "Freq: D, dtype: float64"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results['position_value'] + results['cash_holdings']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "34b5a5b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2025-12-12 14:15:17.544919     NaN\n",
+       "2025-12-13 14:15:17.544919   -1.75\n",
+       "2025-12-14 14:15:17.544919    2.40\n",
+       "2025-12-15 14:15:17.544919   -1.02\n",
+       "2025-12-16 14:15:17.544919   -2.21\n",
+       "Freq: D, dtype: float64"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results['pnl']"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33be2976",
+   "id": "75a5268f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Test - capital allocation, position sizing "
+   ]
   }
  ],
  "metadata": {
