style: Add comment + code testing of transaction fees

--- a/code_testing.ipynb
+++ b/code_testing.ipynb
@@ -968,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 101,
    "id": "3de27b03",
    "metadata": {},
    "outputs": [],
@@ -987,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 110,
    "id": "84ce85f5",
    "metadata": {},
    "outputs": [
@@ -995,12 +995,20 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [00:00<00:00, 3833.92it/s]\n"
+      "  0%|          | 0/5 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 5/5 [00:00<00:00, 4378.19it/s]\n"
      ]
     }
    ],
    "source": [
-    "pm = PortfolioManager(trading_periods_per_year = 1, idealised = True)\n",
+    "from portfolio_manager.constants import BINANCE_SPOT_FEE\n",
+    "pm = PortfolioManager(trading_periods_per_year = 1, idealised = True, transaction_cost= BINANCE_SPOT_FEE)\n",
     "results = pm.backtest(desired_positions, prices_y , prices_x, instant_execution=False)"
    ]
   },
@@ -1016,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 111,
    "id": "d589d6a3",
    "metadata": {},
    "outputs": [
@@ -1047,27 +1055,27 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2025-12-12 14:15:17.544919</th>\n",
+       "      <th>2025-12-14 17:09:27.505021</th>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2025-12-13 14:15:17.544919</th>\n",
+       "      <th>2025-12-15 17:09:27.505021</th>\n",
        "      <td>1.0</td>\n",
        "      <td>-1.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2025-12-14 14:15:17.544919</th>\n",
+       "      <th>2025-12-16 17:09:27.505021</th>\n",
        "      <td>1.0</td>\n",
        "      <td>-1.6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2025-12-15 14:15:17.544919</th>\n",
+       "      <th>2025-12-17 17:09:27.505021</th>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2025-12-16 14:15:17.544919</th>\n",
+       "      <th>2025-12-18 17:09:27.505021</th>\n",
        "      <td>-2.0</td>\n",
        "      <td>2.1</td>\n",
        "    </tr>\n",
@@ -1077,42 +1085,20 @@
       ],
       "text/plain": [
        "                            position_y  position_x\n",
-       "2025-12-12 14:15:17.544919         0.0         0.0\n",
-       "2025-12-13 14:15:17.544919         1.0        -1.5\n",
-       "2025-12-14 14:15:17.544919         1.0        -1.6\n",
-       "2025-12-15 14:15:17.544919         0.0         0.0\n",
-       "2025-12-16 14:15:17.544919        -2.0         2.1"
+       "2025-12-14 17:09:27.505021         0.0         0.0\n",
+       "2025-12-15 17:09:27.505021         1.0        -1.5\n",
+       "2025-12-16 17:09:27.505021         1.0        -1.6\n",
+       "2025-12-17 17:09:27.505021         0.0         0.0\n",
+       "2025-12-18 17:09:27.505021        -2.0         2.1"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "results['position_history']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
-   "id": "82e3e0bb",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.26000000000000023"
-      ]
-     },
-     "execution_count": 87,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#buy one at the ask price, then sell one at the bid price \n",
-    "#cash flow in period t = 3 - close out positions "
    ]
   },
   {
@@ -1275,22 +1261,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 112,
    "id": "fa6b2f7d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2025-12-12 14:15:17.544919    0.0\n",
-       "2025-12-13 14:15:17.544919    0.0\n",
-       "2025-12-14 14:15:17.544919    0.0\n",
-       "2025-12-15 14:15:17.544919    0.0\n",
-       "2025-12-16 14:15:17.544919    0.0\n",
+       "2025-12-14 17:09:27.505021    0.00000\n",
+       "2025-12-15 17:09:27.505021    0.00525\n",
+       "2025-12-16 17:09:27.505021    0.00012\n",
+       "2025-12-17 17:09:27.505021    0.00474\n",
+       "2025-12-18 17:09:27.505021    0.00389\n",
        "Freq: D, dtype: float64"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1301,22 +1287,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 114,
    "id": "e1da021f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2025-12-12 14:15:17.544919    0.00\n",
-       "2025-12-13 14:15:17.544919   -0.75\n",
-       "2025-12-14 14:15:17.544919    0.12\n",
-       "2025-12-15 14:15:17.544919    0.26\n",
-       "2025-12-16 14:15:17.544919    0.11\n",
+       "2025-12-14 17:09:27.505021    0.00\n",
+       "2025-12-15 17:09:27.505021   -0.75\n",
+       "2025-12-16 17:09:27.505021    0.12\n",
+       "2025-12-17 17:09:27.505021    0.26\n",
+       "2025-12-18 17:09:27.505021    0.11\n",
        "Freq: D, dtype: float64"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1327,22 +1313,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 115,
    "id": "fc3870f4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2025-12-12 14:15:17.544919    0.00\n",
-       "2025-12-13 14:15:17.544919   -0.75\n",
-       "2025-12-14 14:15:17.544919   -0.63\n",
-       "2025-12-15 14:15:17.544919   -0.37\n",
-       "2025-12-16 14:15:17.544919   -0.26\n",
+       "2025-12-14 17:09:27.505021    0.00000\n",
+       "2025-12-15 17:09:27.505021   -0.75525\n",
+       "2025-12-16 17:09:27.505021   -0.63537\n",
+       "2025-12-17 17:09:27.505021   -0.38011\n",
+       "2025-12-18 17:09:27.505021   -0.27400\n",
        "Freq: D, dtype: float64"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1692,16 +1678,6 @@
    ],
    "source": [
     "results['pnl']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "75a5268f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Test - capital allocation, position sizing "
    ]
   }
  ],
